--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "server": "pokemock swagger/swagger.json -p 3001",
     "test": "react-scripts test --env=jsdom",
     "build": "cross-env-shell REACT_APP_API=\"/api\" react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "eslint": "eslint --ext js --ext jsx src"
   },
   "devDependencies": {
     "eslint": "^4.9.0",
