--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,14 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+defaults: &defaults
+  working_directory: /tmp
+  docker:
+    - image: circleci/node:9.10.1
+
 jobs:
   build:
-    docker:
-      # specify the version you desire here
-      - image: circleci/node:9.10.1
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+    <<: *defaults
     steps:
       - checkout
 
@@ -34,9 +29,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
   js_linter:
-    docker:
-      - image: circleci/node:9.10.1
-    working_directory: ~/repo
+    <<: *defaults
     steps:
       - run: yarn run eslint
 
