Update circleci working_directory and node version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,10 +3,11 @@
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
 version: 2
+
 defaults: &defaults
-  working_directory: /tmp
+  working_directory: /repo
   docker:
-    - image: circleci/node:9.10.1
+    - image: circleci/node:9.8.0
 
 jobs:
   build:
