--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: /repo
+  working_directory: ~/repo
   docker:
     - image: circleci/node:9.8.0
 
