--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-  js_linter:
+  eslint:
     <<: *defaults
     steps:
       - run: yarn run eslint
@@ -39,6 +39,6 @@ workflows:
   build-and-test:
     jobs:
       - build
-      - test:
+      - eslint:
           requires:
             - build
