--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: ~
+  working_directory: ~/
   docker:
     - image: circleci/node:9.8.0
 
@@ -31,7 +31,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       - persist_to_workspace:
-          root: ~
+          root: ~/
           paths:
             - repo
 
