--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2
 
 defaults: &defaults
-  working_directory: ~/
+  working_directory: ~/repo
   docker:
     - image: circleci/node:9.8.0
 
@@ -13,7 +13,6 @@ jobs:
   build:
     <<: *defaults
     steps:
-      - run: mkdir -p repo && cd repo
       - checkout
 
       # Download and cache dependencies
@@ -40,7 +39,6 @@ jobs:
     steps:
       - attach_workspace:
           at: ~/repo
-      - run: cd repo
       - run: yarn run eslint
 
 workflows:
